--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
-  "include": ["./**/*.ts", "./**/*.tsx"],
+  // "include": ["./**/*.ts", "./**/*.tsx"],
+  "include": ["src/ts_components/TwelveHourForecast.tsx"],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
