--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,8 @@
 for = "/*.js"
 [headers.values]
 Content-Type = "application/javascript"
+
+[[headers]]
+for = "/*.mjs"
+[headers.values]
+Content-Type = "application/javascript"
