--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "compile": "tsc"
   },
   "dependencies": {
+    "@aws-amplify/cli": "^12.13.1",
     "dotenv": "^16.3.1",
     "node-fetch": "^2.7.0",
     "react": "^18.2.0",
